# c_cpp_extern

./: CMakeLists.txt  README.md  a.cpp  a.h  main.cpp
c_extern/: CMakeLists.txt  a.c  a.h  main.c
c_extern_error/: CMakeLists.txt  a.c  a.h  b.c  main.c
cpp_extern/: CMakeLists.txt  a.cpp  a.h  main.cpp
